@@ -1,28 +1,27 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
+# Run Travis CI for R via Docker
+#
+# Made by Dirk Eddelbuettel in September 2018 and released under GPL (>=2)
 
-language: c
-
-sudo: required
-
+os: linux
 dist: trusty
+sudo: required
+services: docker
+
+env:
+  global:
+    - DOCKER_OPTS="--rm -ti -v $(pwd):/mnt -w /mnt"
+      DOCKER_CNTR="rcppmlpack/ci"
+      R_BLD_CHK_OPTS="--no-build-vignettes --no-manual"
 
 before_install:
-  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  # add our launchpad repo which has (inter alia) the new mlpack 2.1.0
-  - sudo add-apt-repository -y ppa:edd/misc
-  # load gcc-7 and make it default below
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - ./run.sh bootstrap
+  - docker pull ${DOCKER_CNTR}
+  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} r -p -e 'sessionInfo()'
 
 install:
-  - ./run.sh install_aptget libmlpack-dev libboost-all-dev libboost-program-options-dev libboost-serialization-dev libarmadillo-dev r-cran-rcpp r-cran-rcpparmadillo r-cran-knitr gcc-7 g++-7 libgfortran-7-dev
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7
+  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} R CMD build ${R_BLD_CHK_OPTS} .
 
 script:
-  - ./run.sh run_tests
-
-after_failure:
-  - ./run.sh dump_logs
+  - docker run ${DOCKER_OPTS} ${DOCKER_CNTR} R CMD check ${R_BLD_CHK_OPTS} RcppMLPACK_*.tar.gz
 
 notifications:
   email:
